# yaml-reference

./: .gitignore  .pre-commit-config.yaml  GitVersion.yml  Makefile  README.md  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: pytests-pr.yml  pytests.yml  release.yml  spectests-badge.yml  spectests-pr.yml
scripts/: spec-test.sh  update-readme-badge.sh
tests/unit/: conftest.py  test_compatibility.py  test_compile_cli.py  test_flatten.py  test_ignore.py  test_merge.py  test_multidocument.py  test_reference.py
yaml_reference/: __init__.py  anchor.py  cli.py  errors.py  reference.py  yaml.py
